Favicon added. Brief description added.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+	<link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,8 +17,11 @@
     <div class="wrapper">
       <header>
         <h1>Tetris.js</h1>
-        <p>A simple tetris.</p>
-
+        <p>A simple tetris with javascript and HTML5 Canvas.</p>
+		<p>I was playing with HTML5 canvas, suddenly I wanted to code a tetris and it easily turned into a challange: how short can I do this?</p>
+		<p>This is the result, 48 lines of javascript.</p>
+		<p>I know code is not clear, not fast, not bullet-proof (I intentionally removed some performance improvements and error check codes).</p>
+		
         <p class="view"><a href="https://github.com/umutozel/Tetris.js">View the Project on GitHub <small>umutozel/Tetris.js</small></a></p>
 
         <ul>
