--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,30 @@
 ﻿<canvas id="myCanvas" width="300" height="600" style="border:1px solid #000000;margin-left: auto;margin-right: auto;margin-top: auto;margin-bottom: auto;display: block;" />
 <script>
-var c = document.getElementById("myCanvas").getContext("2d"),
-    s = [[0x00F0, 0x4444], [0x6600], [0x4640, 0x4E00, 0x4C40, 0x0E40], [0x0E80, 0x6220, 0x2E00, 0x88C0], [0x0E20, 0x44C0, 0x8E00, 0xC880], [0x06C0, 0x8C40], [0x0C60, 0x4C80]],
-    g = 0xE007, h = 0xFFFF, a = [g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, g, h, h];
-function pad(str, ne, nt) { return Array(nt - str.length - ne + 1).join('0') + str + (ne > 0 ? Array(nt - ne - str.length + 1).join('0') : ''); }
-function move(m, i, x, y) {
-    var k = [prep(0), prep(1), prep(2), prep(3)];
-    function prep(j) { return [m[y + j], parseInt(pad(pad(i.toString(2), 0, 16).substring(j * 4, (j + 1) * 4), x + 3, 16), 2)]; }
-    return !(k[0][0] & k[0][1]) && (m[y] = (k[0][0] | k[0][1])) && !(k[1][0] & k[1][1]) && (m[y + 1] = (k[1][0] | k[1][1]))
-        && !(k[2][0] & k[2][1]) && (m[y + 2] = (k[2][0] | k[2][1])) && !(k[3][0] & k[3][1]) && (m[y + 3] = (k[3][0] | k[3][1])) && m;
+var context = document.getElementById("myCanvas").getContext("2d"),
+    shapes = [[0x00F0, 0x4444], [0x6600], [0x4640, 0x4E00, 0x4C40, 0x0E40], [0x0E80, 0x6220, 0x2E00, 0x88C0], [0x0E20, 0x44C0, 0x8E00, 0xC880], [0x06C0, 0x8C40], [0x0C60, 0x4C80]],
+    e = 0xE007, f = 0xFFFF, scene = [e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, f, f];
+function pad(str, left, total) { return Array(total - str.length - left + 1).join('0') + str + (left > 0 ? Array(total - left - str.length + 1).join('0') : ''); }
+function move(tempScene, shape, x, y) {
+    var check = [prep(0), prep(1), prep(2), prep(3)];
+    function prep(row) { return [tempScene[y + row], parseInt(pad(pad(shape.toString(2), 0, 16).substring(row * 4, (row + 1) * 4), x + 3, 16), 2)]; }
+    return !(check[0][0] & check[0][1]) && (tempScene[y] =     (check[0][0] | check[0][1])) && !(check[1][0] & check[1][1]) && (tempScene[y + 1] = (check[1][0] | check[1][1]))
+        && !(check[2][0] & check[2][1]) && (tempScene[y + 2] = (check[2][0] | check[2][1])) && !(check[3][0] & check[3][1]) && (tempScene[y + 3] = (check[3][0] | check[3][1])) && tempScene;
 }
-var x = 3, y = l = 0, i, u, n = o = a, p = 1, t = 15, q;
-function update(k) {
-    i = i || s[Math.floor(u = (Math.random() * s.length))].slice(0), l = ++l % t, k = k && k.keyCode;
-    var xx = x, yy = y, ii = i.slice(0), z = ((!l || k == 40) && yy++) || ((k == 37) && xx--) || ((k == 39) && xx++) || ((k == 38) && ii.push(ii.shift()));
-    if (!(o = move(a.slice(0), ii[0], xx, yy))) {
-        if (!l || k == 40) {
-            if (y < 1) window.removeEventListener(clearInterval(q) || alert('game over, score: ' + p) || "keydown", update);
-            for (var v = 1, e = 0; v < 21; v++) n[v] == 65535 && n.splice(v, ++e / e) && n.splice(1, 0, 0xE007);
-            i = y = 0, x = 3, a = n, p += Math.pow(2, e);
+var x = 3, y = renderLoop = 0, shape, activeScene = tempScene = scene, score = 1, fps = 15, intervalId;
+function update(key) {
+    shape = shape || shapes[Math.floor(Math.random() * shapes.length)].slice(0), renderLoop = ++renderLoop % fps, key = key && key.keyCode;
+    var tempX = x, tempY = y, tempShape = shape.slice(0), temp = ((!renderLoop || key == 40) && tempY++) || ((key == 37) && tempX--) || ((key == 39) && tempX++) || ((key == 38) && tempShape.push(tempShape.shift()));
+    if (!(tempScene = move(scene.slice(0), tempShape[0], tempX, tempY))) {
+        if (!renderLoop || key == 40) {
+            if (y < 1) window.removeEventListener(clearInterval(intervalId) || alert('game over, score: ' + score) || "keydown", update);
+            for (var i = 1, blockCount = 0; i < 21; i++) activeScene[i] == f && activeScene.splice(i, ++blockCount / blockCount) && activeScene.splice(1, 0, e);
+            shape = y = 0, x = 3, scene = activeScene, score += Math.pow(2, blockCount);
         }
-    } else (y = yy, x = xx, i = ii) && draw(n = o);
+    } else (y = tempY, x = tempX, shape = tempShape) && draw(activeScene = tempScene);
 }
-function draw(n) {
-    for (var i = 1, v = c.fillRect(0, 0, c.canvas.width, c.canvas.height), w = c.canvas.width / 10, h = c.canvas.height / 20; i < 21; i++)
-        for (var j = 0, r = n[i].toString(2).substring(3, 13) ; j < 10; j++) c.fillRect((c.fillStyle = r[j] == "0" ? "rgb(255,255,255)" : "rgb(0, 0, 0)") && w * j, h * (i - 1), w, h);
+function draw(drawScene) {
+    for (var i = 1, temp = context.fillRect(0, 0, context.canvas.width, context.canvas.height), width = context.canvas.width / 10, height = context.canvas.height / 20; i < 21; i++)
+        for (var j = 0, row = drawScene[i].toString(2).substring(3, 13) ; j < 10; j++) context.fillRect((context.fillStyle = row[j] == "0" ? "rgb(255,255,255)" : "rgb(0, 0, 0)") && width * j, height * (i - 1), width, height);
 }
-q = setInterval(window.addEventListener("keydown", update) || update, 30);
+intervalId = setInterval(window.addEventListener("keydown", update) || update, 30);
 </script>
