--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,34 @@
 ﻿<canvas id="myCanvas" width="300" height="600" style="border:1px solid #000000;margin-left: auto;margin-right: auto;margin-top: auto;margin-bottom: auto;display: block;" />
 <script>
-var context = document.getElementById("myCanvas").getContext("2d"),
-    shapes = [[0x00F0, 0x4444], [0x6600], [0x4640, 0x4E00, 0x4C40, 0x0E40], [0x0E80, 0x6220, 0x2E00, 0x88C0], [0x0E20, 0x44C0, 0x8E00, 0xC880], [0x06C0, 0x8C40], [0x0C60, 0x4C80]],
-    e = 0xE007, f = 0xFFFF, scene = [e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, f, f];
-function pad(str, left, total) { return Array(total - str.length - left + 1).join('0') + str + (left > 0 ? Array(total - left - str.length + 1).join('0') : ''); }
-function move(tempScene, shape, x, y) {
-    var check = [prep(0), prep(1), prep(2), prep(3)];
-    function prep(row) { return [tempScene[y + row], parseInt(pad(pad(shape.toString(2), 0, 16).substring(row * 4, (row + 1) * 4), x + 3, 16), 2)]; }
-    return !(check[0][0] & check[0][1]) && (tempScene[y] =     (check[0][0] | check[0][1])) && !(check[1][0] & check[1][1]) && (tempScene[y + 1] = (check[1][0] | check[1][1]))
-        && !(check[2][0] & check[2][1]) && (tempScene[y + 2] = (check[2][0] | check[2][1])) && !(check[3][0] & check[3][1]) && (tempScene[y + 3] = (check[3][0] | check[3][1])) && tempScene;
+var context = document.getElementById("myCanvas").getContext("2d"), canvas = context.canvas,
+    shapes = [[3840, 17476], [26112], [17984, 19968, 19520, 3648], [3712, 25120, 11776, 35008], [3616, 17600, 36352, 51328], [1728, 35904], [3168, 19584]],
+    e = '0000000000', scene = [e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e, e], canvasWidth = canvas.width, canvasHeight = canvas.height, width = canvasWidth / 10, height = canvasHeight / 20,
+    x = 3, y = -1, renderLoop = 0, shape, shapeIndex, activeScene = scene, score = 0, frameDelay = 215, levelIndicator = 5, intervalId, q;
+function move(tempScene, tempShape, tempX, tempY) {
+    var shapeLine = (e + '000000' + tempShape.toString(2)).slice(-16);
+    function check(row) {
+        for (var i = 0, sceneLine = (tempScene[tempY + row] || '').split('') ; i < 4; i++)
+            shapeLine.substring(row * 4, (row + 1) * 4)[i] != 0 && (sceneLine[tempX + i] == 0 ? sceneLine[tempX + i] = shapeIndex + 1 : tempScene = (i = 4) - 4);
+        return (tempScene[tempY + row] = sceneLine.join('')) || tempScene;
+    }
+    return check(0) && check(1) && check(2) && check(3) && tempScene;
 }
-var x = 3, y = renderLoop = 0, shape, activeScene = tempScene = scene, score = 1, fps = 215, levelIndicator = 50, intervalId, q;
 function update(key) {
-    shape = shape || shapes[Math.floor(Math.random() * shapes.length)].slice(0), renderLoop = ++renderLoop % ((q = fps - Math.floor(score / levelIndicator)) && q < 15 ? 15 : q), key = key && key.keyCode;
-    var tempX = x, tempY = y, tempShape = shape.slice(0), temp = ((!renderLoop || key == 40) && tempY++) || ((key == 37) && tempX--) || ((key == 39) && tempX++) || ((key == 38) && tempShape.push(tempShape.shift()));
+    shape = shape || shapes[shapeIndex = Math.floor(Math.random() * shapes.length)].slice(0), renderLoop = ++renderLoop % ((q = frameDelay - Math.floor(score / levelIndicator)) && q < 15 ? 15 : q), key = key && key.keyCode;
+    var tempX = x, tempY = y, tempScene, tempShape = shape.slice(0), temp = ((!renderLoop || key == 40) && tempY++) || ((key == 37) && tempX--) || ((key == 39) && tempX++) || ((key == 38) && tempShape.push(tempShape.shift()));
     if (!(tempScene = move(scene.slice(0), tempShape[0], tempX, tempY))) {
         if (!renderLoop || key == 40) {
             if (y < 1) window.removeEventListener(clearInterval(intervalId) || alert('game over, score: ' + score) || "keydown", update);
-            for (var i = 1, blockCount = 0; i < 21; i++) activeScene[i] == f && activeScene.splice(i, ++blockCount / blockCount) && activeScene.splice(1, 0, e);
-            shape = y = 0, x = 3, scene = activeScene, score += Math.pow(2, blockCount);
+            for (var i = 1, blockCount = 0; i < 21; i++) activeScene[i].indexOf(0) < 0 && activeScene.splice(i, ++blockCount / blockCount) && activeScene.splice(1, 0, e);
+            shape = 0, y = -1, x = 3, scene = activeScene, score += Math.pow(2, blockCount);
         }
     } else (y = tempY, x = tempX, shape = tempShape) && draw(activeScene = tempScene);
 }
 function draw(drawScene) {
-    for (var i = 1, temp = context.fillRect(0, 0, context.canvas.width, context.canvas.height), width = context.canvas.width / 10, height = context.canvas.height / 20; i < 21; i++)
-        for (var j = 0, row = drawScene[i].toString(2).substring(3, 13); j < 10; j++) context.fillRect((context.fillStyle = row[j] == "0" ? "#FFFFFF" : "#000000") && width * j, height * (i - 1), width, height);
+    for (var i = 1, temp = canvas.width = canvasWidth; i < 21; i++)
+        for (var j = 0; j < 10; j++)
+            (q = drawScene[i][j] * 3500000) && (context.fillRect((context.fillStyle = '#' + ('000000' + q.toString(16)).slice(-6)) && width * j, height * (i - 1), width, height)
+                || context.rect(width * j, height * (i - 1), width, height) || context.stroke());
 }
 intervalId = setInterval(window.addEventListener("keydown", update) || update, 3);
 </script>
