--- a/index.html
+++ b/index.html
@@ -51,54 +51,10 @@
             pageTracker._trackPageview();
             } catch(err) {}
 			
-    var ctx = document.getElementById("myCanvas").getContext("2d");
-    var s = [[0x00F0, 0x4444], [0x6600], [0x4640, 0x4E00, 0x4C40, 0x0E40], [0x0E80, 0x6220, 0x2E00, 0x88C0], [0x0E20, 0x44C0, 0x8E00, 0xC880], [0x06C0, 0x8C40], [0x0C60, 0x4C80]],
-        a = [0xFFFF, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xE007, 0xFFFF, 0xFFFF];
-    function to10(bin) { return parseInt(bin.split('').join(''), 2); }
-    function pad(str, ne, nt, c) { return Array(nt - str.length - ne + 1).join(c || '0') + str + (ne > 0 ? Array(nt - ne - str.length + 1).join(c || '0') : ''); }
-    function move(as, i, x, y) {
-        var is = [prep(0), prep(1), prep(2), prep(3)];
-        function prep(j) { return [as[y + j], to10(pad(pad(i.toString(2), 0, 16).substring(j * 4, (j + 1) * 4), x + 3, 16))]; }
-        return !(is[0][0] & is[0][1]) && (as[y] = (is[0][0] | is[0][1])) && !(is[1][0] & is[1][1]) && (as[y + 1] = (is[1][0] | is[1][1]))
-            && !(is[2][0] & is[2][1]) && (as[y + 2] = (is[2][0] | is[2][1])) && !(is[3][0] & is[3][1]) && (as[y + 3] = (is[3][0] | is[3][1])) && as;
-    }
-    var x = 3, y = 0, i, si, as = a, at = a, l = 0, ii, p = 1, t = 15;
-    function update(key) {
-        i = i || s[Math.floor(si = (Math.random() * s.length))].slice(0), l = ++l % t, key = key && (key.key || key.keyIdentifier);
-        var xx = x, yy = y, ai = i.slice(0);
-        if (!l || key == "Down") yy++;
-        else if (key == "Left") xx--;
-        else if (key == "Right") xx++;
-        else if (key == "Up") ai.push(ai.shift());
-        if (!(at = move(a.slice(0), ai[0], xx, yy))) {
-            if (!l || key == "Down") {
-                if (y < 1) {
-                    clearInterval(ii);
-                    window.removeEventListener("keydown", update);
-                    alert('game over, score: ' + p);
-                }
-                for (var k = 1, e = 0; k < 21; k++)
-                    if (as[k] == 65535) {
-                        as.splice(k, ++e / e);
-                        as.splice(1, 0, 0xE007);
-                    }
-                i = y = 0, x = 3, a = as, p += Math.pow(2, e);
-            }
-        } else {
-            y = yy, x = xx, i = ai;
-            draw(as = at);
-        }
-    }
-    function draw(as) {
-        ctx.fillRect(0, 0, ctx.canvas.width, ctx.canvas.height);
-        for (var i = 1, w = ctx.canvas.width / 10, h = ctx.canvas.height / 20; i < 21; i++)
-            for (var j = 0, r = as[i].toString(2).substring(3, 13) ; j < 10; j++) {
-                ctx.fillStyle = r[j] == "0" ? "rgb(255,255,255)" : "rgb(0, 0, 0)";
-                ctx.fillRect(w * j, h * (i - 1), w, h);
-            }
-    }
-    window.addEventListener("keydown", update);
-    ii = setInterval(update, 30);
+var a=document.getElementById("myCanvas").getContext("2d"),b=a.canvas,c=[[3840,17476],[26112],[17984,19968,19520,3648],[3712,25120,11776,35008],[3616,17600,36352,51328],[1728,35904],[3168,19584]],d="0000000000",e=[d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d],f=b.width,g=f/10,h=b.height/20,x=3,y=-1,k=0,l,m,n=e,o=0,p=215,q=5,r,z;
+function s(v,w,B,C){function A(w){for(var A=0,D=(v[C+w]||"").split("");4>A;A++)0!=E.substring(4*w,4*(w+1))[A]&&(0==D[B+A]?D[B+A]=m+1:v=(A=4)-4);return(v[C+w]=D.join(""))||v}var E=(d+"000000"+w.toString(2)).slice(-16);return A(0)&&A(1)&&A(2)&&A(3)&&v}
+function t(v){l=l||c[m=Math.floor(Math.random()*c.length)].slice(0);k=++k%((z=p-Math.floor(o/q))&&15>z?15:z);v=v&&v.keyCode;var w=x,B=y,C,A=l.slice(0);(!k||40==v)&&B++||37==v&&w--||39==v&&w++||38==v&&A.push(A.shift());if(C=s(e.slice(0),A[0],w,B))(y=B,x=w,l=A)&&u(n=C);else if(!k||40==v){1>y&&window.removeEventListener(clearInterval(r)||alert("game over, score: "+o)||"keydown",t);v=1;for(w=0;21>v;v++)0>n[v].indexOf(0)&&n.splice(v,++w/w)&&n.splice(1,0,d);l=0;y=-1;x=3;e=n;o+=Math.pow(2,w)}}
+function u(v){var w=1;for(b.width=f;21>w;w++)for(var B=0;10>B;B++)(z=35E5*v[w][B])&&(a.fillRect((a.fillStyle="#"+("000000"+z.toString(16)).slice(-6))&&g*B,h*(w-1),g,h)||a.rect(g*B,h*(w-1),g,h)||a.stroke())}r=setInterval(window.addEventListener("keydown",t)||t,3);
           </script>
   </body>
 </html>
