--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1>Tetris.js</h1>
         <p>A simple tetris with javascript and HTML5 Canvas.</p>
 		<p>I was playing with HTML5 canvas, suddenly I wanted to code a tetris and it easily turned into a challange: how short can I do this?</p>
-		<p>This is the result, 48 lines of javascript.</p>
 		<p>I know code is not clear, not fast, not bullet-proof (I intentionally removed some performance improvements and error check codes).</p>
+		<p>But it was fun coding :)</p>
 		
         <p class="view"><a href="https://github.com/umutozel/Tetris.js">View the Project on GitHub <small>umutozel/Tetris.js</small></a></p>
 
